# NEAT-implementation

./: CMakeLists.txt  README.md
src/NeuralNetworks/: Genome.cpp  Genome.h  Layer.h  NeuralNetwork.h  Neuron.h
